--- a/sudo.html
+++ b/sudo.html
@@ -6,11 +6,8 @@
     <style>
       * { margin: 0; padding: 0; box-sizing: border-box; }
       body { font: 13px Helvetica, Arial; background: #fff;}
-/*      #input_area { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; height: 45px;}
-      #input_area  input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
-      #input_area  button { width: 8%; background: rgb(130, 224, 255); border: none; padding: 10px; }*/
       #messages { list-style-type: none; margin: 0; padding: 0;  overflow:auto; height: 92vh; width: 100%; }
-      #messages li { padding: 5px 10px; }
+      #messages li { padding: 5px 10px; border: 0; padding: 10px; width: 100%; margin-right: .5%;}
       #messages li:nth-child(odd) { background: #eee; }
 
     </style>
@@ -19,10 +16,6 @@
     <div id = "content" >
         <ul id="messages" ></ul>
     </div>
-<!--     <div id="input_area" onclick="register">
-        <input id="inp" autocomplete="off" />
-        <button>执行</button>
-    </div> -->
   </body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.1/socket.io.js"></script>
   <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
@@ -33,32 +26,55 @@
         var name = ''
         var socket = io('http://127.0.0.1:8001');
 
-        // $('#input_area button').on('click',function(){
-        //     socket.emit('cmd', $('#inp').val());
-        // });
+        socket.emit('iammanage', '');
 
-        // //回车事件绑定
-        // $('#inp').bind('keyup', function(event) {
-        //     if (event.keyCode == "13") {
-        //         //回车执行查询
-        //         $('#input_area button').click();
-        //     }
-        // });
 
-        //   //用户连接时触发
         socket.on('allow', function (data) {
           // 往lu动态添加li
-          // $('#messages').append($('<li>').text(data));
-          $('#messages').append( '<li>' + 
-                       '<div style= "border: 0; padding: 10px; width: 80%; margin-right: .5%;">' +  
-                       data + 
-                       '</div>' + 
-                       '<button style="width: 50%; background: rgb(130, 224, 255); border: none; padding: 10px;" > sure </button>'  + 
-                       '<button style="width: 50%; background: rgb(255, 150, 10); border: none; padding: 10px;" > cancel </button>' + 
-                       '</li>');
+          // $('#messages').append( '<li>' + 
+          //              '<div style= "border: 0; padding: 10px; width: 80%; margin-right: .5%;">' +  
+          //              data + 
+          //              '</div>' + 
+          //              '<button id = "sure_bt" style="width: 50%; background: rgb(130, 224, 255); border: none; padding: 10px;" > sure </button>'  + 
+          //              '<button id = "cancel_bt" style="width: 50%; background: rgb(255, 150, 10); border: none; padding: 10px;" > cancel </button>' + 
+          //              '</li>');
+          //   // 默认滚动底部
+          // $('#messages').scrollTop( $('#messages')[0].scrollHeight);
+          // $('#messages').on('click',"#sure_bt",function(){
+          //   $(this).parent().remove(); 
+          //  });
+         $('#messages').append( '<li> <div usrid = "' + 
+                        data.userid + 
+                        '"  usercmd = "' + 
+                        data.cmd + 
+                        '" >' +  
+                        data.title + 
+                       '</div> <button id = "sure_bt" style="width: 49%; background: rgb(130, 224, 255); border: none; padding: 10px;" > sure </button> <button id = "cancel_bt" style="width: 49%; background: rgb(255, 150, 10); border: none; padding: 10px;" > cancel </button> </li>');
             // 默认滚动底部
           $('#messages').scrollTop( $('#messages')[0].scrollHeight);
+           // 确认
+          $('#messages #sure_bt').on('click',function(){
+
+            send_manage_data_allow = new Object();
+            send_manage_data_allow.id = $(this).parent().children('div').attr("usrid");
+            send_manage_data_allow.cmd = $(this).parent().children('div').attr("usercmd")
+            socket.emit('send_manage_data_allow', send_manage_data_allow);
+            $(this).parent().remove();
+
+           });
+          // 取消
+          $('#messages #cancel_bt').on('click',function(){
+
+            send_manage_data_deny = new Object();
+            send_manage_data_deny.id = $(this).parent().children('div').attr("usrid");
+            send_manage_data_deny.cmd = $(this).parent().children('div').attr("usercmd")
+            socket.emit('send_manage_data_deny', send_manage_data_deny);
+            $(this).parent().remove();
+            
+           });
         });
+
+
 
          
 
